Making buildsys to work initially

--- a/build.conf
+++ b/build.conf
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin:/tools/bin
-DEV_ROOT=$PWD
+DEV_ROOT=/root
 BUILD_DIR=$DEV_ROOT/BUILD
 SRC_DIR=$DEV_ROOT/SOURCE
 SPECS=$DEV_ROOT/SPEC
@@ -30,6 +30,9 @@ BUILD_LIST=(
 	procps
 	grep
 	readline
+	bison
+	bison
+	flex
 	bash
 	gdbm
 	gawk
@@ -55,6 +58,69 @@ configure_system()
 #	for NIC in /sys/class/net/* ; do
 #		INTERFACE=${NIC##*/} udevadm test --action=add $NIC
 #	done
+	echo -e "\nCreating essential directories and files in ${PWD}\n"
+	mkdir -pv {bin,boot,etc/{opt,sysconfig},home,lib,mnt,opt,run}
+	mkdir -pv {media/{floppy,cdrom},sbin,srv,var}
+	install -dv -m 0750 root
+	install -dv -m 1777 tmp var/tmp
+	mkdir -pv usr/{,local/}{bin,include,lib,sbin,src}
+	mkdir -pv usr/{,local/}share/{doc,info,locale,man}
+	mkdir -v  usr/{,local/}share/{misc,terminfo,zoneinfo}
+	mkdir -pv usr/{,local/}share/man/man{1..8}
+	for dir in usr usr/local; do
+		ln -sv share/{man,doc,info} $dir
+	done
+	case $(uname -m) in
+		x86_64) ln -sv lib lib64 && ln -sv lib usr/lib64 ;;
+	esac
+	mkdir -v var/{log,mail,spool}
+	ln -sv run var/run
+	ln -sv run/lock var/lock
+	mkdir -pv var/{opt,cache,lib/{misc,locate},local}
+
+	[ -x /bin/bash ] || ln -sv /tools/bin/{bash,cat,echo,pwd,stty} /bin
+	[ -x /usr/bin/perl ] || ln -sv /tools/bin/perl /usr/bin
+	[ -f /usr/lib/libgcc_s.so ] || ln -sv /tools/lib/libgcc_s.so{,.1} /usr/lib
+	if [ ! -f /usr/lib/libstdc++.so ]; then
+		ln -sv /tools/lib/libstdc++.so{,.6} /usr/lib
+		sed 's/tools/usr/' /tools/lib/libstdc++.la > /usr/lib/libstdc++.la
+	fi
+	[ -x /bin/sh ] || ln -sv bash /bin/sh
+
+	cat > etc/passwd <<- "EOF"
+	root:x:0:0:root:/root:/bin/bash
+	bin:x:1:1:bin:/dev/null:/bin/false
+	nobody:x:99:99:Unprivileged User:/dev/null:/bin/false
+	EOF
+
+	cat > etc/group <<- "EOF"
+	root:x:0:
+	bin:x:1:
+	sys:x:2:
+	kmem:x:3:
+	tape:x:4:
+	tty:x:5:
+	daemon:x:6:
+	floppy:x:7:
+	disk:x:8:
+	lp:x:9:
+	dialout:x:10:
+	audio:x:11:
+	video:x:12:
+	utmp:x:13:
+	usb:x:14:
+	cdrom:x:15:
+	mail:x:34:
+	nogroup:x:99:
+	EOF
+
+	touch var/log/{btmp,lastlog,wtmp}
+	chgrp -v utmp var/log/lastlog
+	chmod -v 664  var/log/lastlog
+	chmod -v 600  var/log/btmp
+	touch etc/mtab
+	# Though it is a harmless message, the install stage of Glibc will complain about the absence of /etc/ld.so.conf. Prevent this warning with:
+	touch etc/ld.so.conf
 
 	cat > etc/sysconfig/ifconfig.eth0 <<- "EOF"
 	ONBOOT=yes
