--- a/build.conf
+++ b/build.conf
@@ -2,7 +2,6 @@
 
 PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin:/tools/bin
 DEV_ROOT=/root
-BUILD_DIR=$DEV_ROOT/BUILD
 SRC_DIR=$DEV_ROOT/SOURCE
 SPECS=$DEV_ROOT/SPEC
 FS_ROOT=$DEV_ROOT/ROOT
@@ -50,7 +49,7 @@ BUILD_LIST=(
 	sysvinit
 	lfs-bootscripts
 	grub
-	linux
+	kernel
 	)
 
 configure_system()
