--- a/SPECS/kernel-headers/build
+++ b/SPECS/kernel-headers/build
@@ -3,8 +3,7 @@
 make headers_check
 make INSTALL_HDR_PATH=dest headers_install
 find dest/include \( -name .install -o -name ..install.cmd \) -delete
-cp -rv dest/include/* /usr/include
 if [ ! -d /usr/tmp-include ]; then
 	mkdir -pv /usr/tmp-include
 fi
-cp -rv dest/include/* /usr/tmp-include
+cp -rv dest/include/* /usr/{include,tmp-include}
