--- a/build.conf
+++ b/build.conf
@@ -15,6 +15,7 @@ HOST=i686-pc-gnu-linux
 TARGET=i686-pc-gnu-linux
 ABI=32
 BUILD_LIST=(
+	glibc
 	zlib
 	file
 	sed
@@ -228,5 +229,5 @@ configure_system()
 	EOF
 }
 
-export PATH CFLAGS CXXFLAGS MAKEFLAGS HOST DEV_ROOT PACKAGES POOL SPECS FS_ROOT PREFIX ABI BUILD_LIST
+export PATH CFLAGS CXXFLAGS MAKEFLAGS HOST DEV_ROOT PACKAGES PKG_POOL SPECS FS_ROOT PREFIX ABI BUILD_LIST
 unset USERNAME
