--- a/build.conf
+++ b/build.conf
@@ -4,6 +4,7 @@ PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin:/tools/bin
 DEV_ROOT=/root
 PACKAGES=$DEV_ROOT/PACKAGES
 SPECS=$DEV_ROOT/SPECS
+PKG_POOL=$DEV_ROOT/POOL
 FS_ROOT=$DEV_ROOT/ROOT
 MECLOUD_BIN=$DEV_ROOT/mecloud.tar.gz
 PREFIX=/usr
