Fix issue #4 number of threads option should be able to be input in cmdline

--- a/first-stage.conf
+++ b/first-stage.conf
@@ -14,37 +14,32 @@ CONFIGFLAGS='--prefix=/usr'
 HOST=i686-pc-gnu-linux
 TARGET=i686-pc-gnu-linux
 ABI=32
+ACTION=build_pkgs
 BUILD_LIST=(
-	zlib
-	file
+	kernel-headers
+	glibc
+	binutils
+	gmp
+	mpfr
+	mpc
+	gcc
 	sed
 	bzip2
 	ncurses
 	util-linux
 	e2fsprogs
 	coreutils
-	iana-etc
-	procps
 	grep
 	readline
+	bison
+	bison
+	flex
 	bash
-	gdbm
 	gawk
 	findutils
 	xz
 	gzip
-	iproute2
-	kbd
-	kmod
-	less
-	shadow
 	tar
-	udev
-	vim
-	sysvinit
-	bootscripts
-	grub
-	kernel
 	)
 
 configure_system()
@@ -228,5 +223,5 @@ configure_system()
 	EOF
 }
 
-export PATH CFLAGS CXXFLAGS MAKEFLAGS HOST DEV_ROOT PACKAGES POOL SPECS FS_ROOT PREFIX ABI BUILD_LIST
+export PATH CFLAGS CXXFLAGS MAKEFLAGS HOST DEV_ROOT PACKAGES PKG_POOL SPECS FS_ROOT PREFIX ABI BUILD_LIST
 unset USERNAME
