Fix bug #6 there should be a partial directory for incomplete download packages

--- a/first-stage.conf
+++ b/first-stage.conf
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash -a
 
 PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin:/tools/bin
 DEV_ROOT=/root
@@ -224,5 +224,4 @@ configure_system()
 	EOF
 }
 
-export PATH CFLAGS CXXFLAGS MAKEFLAGS HOST DEV_ROOT PACKAGES PKG_POOL SPECS FS_ROOT PREFIX ABI BUILD_LIST
 unset USERNAME
