--- a/SPECS/kernel-headers/build
+++ b/SPECS/kernel-headers/build
@@ -1,7 +1,9 @@
 #!/tools/bin/sh
 
+toolchain_link tools
 make headers_check
 make INSTALL_HDR_PATH=dest headers_install
+toolchain_link root
 find dest/include \( -name .install -o -name ..install.cmd \) -delete
 if [ ! -d /usr/tmp-include ]; then
 	mkdir -pv /usr/tmp-include
