--- a/DEVROOT/SPECS/kernel/build
+++ b/DEVROOT/SPECS/kernel/build
@@ -1,6 +1,6 @@
 #!/bin/sh
 
 # Skip kernel configuration by copying the kernel config file, .config, from the host system (assuming it is available) to the unpacked linux directory.
-make ARCH=$ARCH oldconfig
+make oldconfig
 # Compile the kernel image and modules:
-make ARCH=$ARCH
+make
