issue #10 add sdk support for arm architecture

--- a/first-stage.conf
+++ b/first-stage.conf
@@ -1,5 +1,4 @@
-#!/bin/bash -a
-
+set -a
 PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin:/tools/bin
 DEV_ROOT=/root
 PACKAGES=$DEV_ROOT/PACKAGES
@@ -13,6 +12,7 @@ MAKEFLAGS='-j2'
 CONFIGFLAGS='--prefix=/usr'
 HOST=i686-pc-gnu-linux
 TARGET=i686-pc-gnu-linux
+ARCH=x86
 ABI=32
 ACTION=build_pkgs
 BUILD_LIST=(
