--- a/SPECS/kernel-headers/build
+++ b/SPECS/kernel-headers/build
@@ -4,14 +4,14 @@ toolchain_link tools
 # Make sure there are no stale files and dependencies lying around from previous activity:
 make mrproper
 # Now test and extract the user-visible kernel headers from the source. They are placed in an intermediate local directory and copied to the needed location because the extraction process removes any existing files in the target directory. There are also some hidden files used by the kernel developers and not needed by LFS that are removed from the intermediate directory.
-make headers_check
-make INSTALL_HDR_PATH=dest headers_install
+make ARCH=$ARCH headers_check
+make ARCH=$ARCH INSTALL_HDR_PATH=dest headers_install
 toolchain_link root
 find dest/include \( -name .install -o -name ..install.cmd \) -delete
 if [ ! -d /usr/tmp-include ]; then
 	mkdir -pv /usr/tmp-include
 else
-	rm -rf /usr/tmp-include
+	rm -rf /usr/tmp-include/*
 fi
 cp -rv dest/include/* /usr/{include,tmp-include}
 rm -rvf dest
