--- a/SPECS/kernel/build
+++ b/SPECS/kernel/build
@@ -1,6 +1,6 @@
 #!/bin/sh
 
 # Skip kernel configuration by copying the kernel config file, .config, from the host system (assuming it is available) to the unpacked linux directory.
-make oldconfig
+make ARCH=$ARCH oldconfig
 # Compile the kernel image and modules:
-make
+make ARCH=$ARCH
