fix issue #15 buildsys: Add unpack command

--- a/DEVROOT/INC/build-i686.conf
+++ b/DEVROOT/INC/build-i686.conf
@@ -4,8 +4,8 @@ SPECS=$DEV_ROOT/SPECS
 PKG_POOL=$DEV_ROOT/POOL
 FS_ROOT=$DEV_ROOT/ROOT
 PREFIX=/usr
-CFLAGS='-O3 -march=pentium2 '
-CXXFLAGS='-O3 -march=pentium2 '
+CFLAGS='-O3 -march=pentium2 -pipe '
+CXXFLAGS='-O3 -march=pentium2 -pipe '
 MAKEFLAGS='-j2 '
 CONFIGFLAGS='--prefix=/usr '
 HOST=i686-pc-gnu-linux
