issue 10 SDE: add sdk support for arm architecture

--- a/DEVROOT/INC/build-i686.conf
+++ b/DEVROOT/INC/build-i686.conf
@@ -3,43 +3,66 @@ BUILD_DIR=$DEV_ROOT/BUILD
 SPECS=$DEV_ROOT/SPECS
 PKG_POOL=$DEV_ROOT/POOL
 FS_ROOT=$DEV_ROOT/ROOT
+SPECNAME=spec-i686
 PREFIX=/usr
 CFLAGS='-O3 -march=pentium2 -pipe '
 CXXFLAGS='-O3 -march=pentium2 -pipe '
-MAKEFLAGS='-j2 '
 ARCH=x86
 ABI=32
 BUILD_LIST=(
+	kernel-headers
 	glibc
 	zlib
 	file
+	binutils
+	gmp
+	mpfr
+	mpc
+	gcc
 	sed
 	bzip2
 	ncurses
 	util-linux
+	psmisc
 	e2fsprogs
 	coreutils
 	iana-etc
+	m4
+	bison
 	procps
 	grep
 	readline
 	bash
+	libtool
 	gdbm
+	popt
+	pkg-config
+	autoconf
+	automake
+	diffutils
 	gawk
 	findutils
+	flex
+	gettext
+	groff
 	xz
+	grub
 	gzip
 	iproute2
 	kbd
 	kmod
 	less
+	libpipeline
+	make
+	patch
 	shadow
+	rsyslogd
+	sysvinit
 	tar
+	texinfo
 	udev
 	vim
-	sysvinit
 	bootscripts
-	grub
 	kernel
 	)
 
