--- a/DEVROOT/INC/first-stage-i686.conf
+++ b/DEVROOT/INC/first-stage-i686.conf
@@ -6,10 +6,7 @@ FS_ROOT=$DEV_ROOT/ROOT
 PREFIX=/usr
 CFLAGS='-O3 -march=pentium2 -pipe '
 CXXFLAGS='-O3 -march=pentium2 -pipe '
-MAKEFLAGS='-j2 '
 CONFIGFLAGS='--prefix=/usr '
-HOST=i686-pc-gnu-linux
-TARGET=i686-pc-gnu-linux
 ARCH=x86
 ABI=32
 ACTION=build_pkgs
@@ -38,6 +35,8 @@ BUILD_LIST=(
 	xz
 	gzip
 	tar
+	popt
+	pkg-config
 	)
 
 configure_system()
