--- a/DEVROOT/INC/tools.conf
+++ b/DEVROOT/INC/tools.conf
@@ -1,44 +1,15 @@
-PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin:/tools/bin
+PATH=/tools/bin:/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin
 DEV_ROOT=/root
-BUILD_DIR=$DEV_ROOT/BUILD-ARM
+BUILD_DIR=$DEV_ROOT/BUILD-TOOLS
 SPECS=$DEV_ROOT/SPECS
 PKG_POOL=$DEV_ROOT/POOL
 FS_ROOT=$DEV_ROOT/ROOT
-PREFIX=/usr
-CFLAGS='-Os -pipe'
-CXXFLAGS='-Os -pipe'
-MAKEFLAGS='-j2'
-CONFIGFLAGS='--prefix=/usr'
-ARCH=arm
+PREFIX=/tools
+CFLAGS='-O3 -pipe'
+CXXFLAGS='-O3 -pipe'
+ARCH=x86
 ACTION=build_pkgs
-
-BUILD_LIST=(
-	kernel-headers
-	glibc
-	binutils
-	zlib
-	gmp
-	mpfr
-	mpc
-	gcc
-	sed
-	bzip2
-	ncurses
-	util-linux
-	e2fsprogs
-	coreutils
-	grep
-	readline
-	bison
-	bison
-	flex
-	bash
-	gawk
-	findutils
-	xz
-	gzip
-	tar
-	)
+BUILD_LIST="flex"
 
 configure_system()
 {
@@ -53,20 +24,20 @@ configure_system()
 	install -dv -m 1777 tmp var/tmp
 	mkdir -pv usr/{,local/}{bin,include,lib,sbin,src}
 	mkdir -pv usr/{,local/}share/{doc,info,locale,man}
-	mkdir -v  usr/{,local/}share/{misc,terminfo,zoneinfo}
+	mkdir -pv  usr/{,local/}share/{misc,terminfo,zoneinfo}
 	mkdir -pv usr/{,local/}share/man/man{1..8}
 	for dir in usr usr/local; do
-		ln -sv share/{man,doc,info} $dir
+		ln -fsv share/{man,doc,info} $dir
 	done
 	case $(uname -m) in
 		x86_64) ln -sv lib lib64 && ln -sv lib usr/lib64 ;;
 	esac
-	mkdir -v var/{log,mail,spool}
-	ln -sv run var/run
-	ln -sv run/lock var/lock
+	mkdir -pv var/{log,mail,spool}
+	ln -fsv /run var/run
+	ln -fsv /run/lock var/lock
 	mkdir -pv var/{opt,cache,lib/{misc,locate},local}
 
-	[ -x /bin/bash ] || ln -sv /tools/bin/{bash,cat,echo,pwd,stty} /bin
+	[ -x /bin/bash ] || ln -fsv /tools/bin/{bash,cat,echo,pwd,stty} /bin
 	[ -x /usr/bin/perl ] || ln -sv /tools/bin/perl /usr/bin
 	[ -f /usr/lib/libgcc_s.so ] || ln -sv /tools/lib/libgcc_s.so{,.1} /usr/lib
 	if [ ! -f /usr/lib/libstdc++.so ]; then
@@ -220,5 +191,4 @@ configure_system()
 	# End /etc/fstab
 	EOF
 }
-
 unset USERNAME
