fix vim cross compile error and other

--- a/DEVROOT/INC/tools.conf
+++ b/DEVROOT/INC/tools.conf
@@ -9,7 +9,7 @@ CFLAGS='-O3 -pipe'
 CXXFLAGS='-O3 -pipe'
 ARCH=x86
 ACTION=build_pkgs
-BUILD_LIST="flex"
+BUILD_LIST="flex popt pkg-config"
 
 configure_system()
 {
