input $ARCH from config file

--- a/DEVROOT/INC/build-i686.conf
+++ b/DEVROOT/INC/build-i686.conf
@@ -7,7 +7,7 @@ SPECNAME=spec-i686
 PREFIX=/usr
 CFLAGS='-O3 -march=pentium2 -pipe '
 CXXFLAGS='-O3 -march=pentium2 -pipe '
-ARCH=x86
+ARCH=i686
 ABI=32
 BUILD_LIST=(
 	kernel-headers
