--- a/DEVROOT/INC/first-stage-i686.conf
+++ b/DEVROOT/INC/first-stage-i686.conf
@@ -7,7 +7,7 @@ PREFIX=/usr
 CFLAGS='-O3 -march=pentium2 -pipe '
 CXXFLAGS='-O3 -march=pentium2 -pipe '
 CONFIGFLAGS='--prefix=/usr '
-ARCH=x86
+ARCH=i686
 ABI=32
 ACTION=build_pkgs
 BUILD_LIST=(
