--- a/DEVROOT/INC/tools.conf
+++ b/DEVROOT/INC/tools.conf
@@ -7,7 +7,7 @@ FS_ROOT=$DEV_ROOT/ROOT
 PREFIX=/tools
 CFLAGS='-O3 -pipe'
 CXXFLAGS='-O3 -pipe'
-ARCH=x86
+ARCH=i686
 ACTION=build_pkgs
 BUILD_LIST="flex popt pkg-config"
 
