--- a/INC/build-i686.conf
+++ b/INC/build-i686.conf
@@ -52,7 +52,7 @@ BUILD_LIST=(
 	make
 	patch
 	shadow
-	rsyslogd
+	rsyslog
 	sysvinit
 	tar
 	texinfo
@@ -88,14 +88,14 @@ configure_system()
 	ln -fsv /run/lock var/lock
 	mkdir -pv var/{opt,cache,lib/{misc,locate},local}
 
-	[ -x /bin/bash ] || ln -fsv /tools/bin/{bash,cat,echo,pwd,stty} /bin
-	[ -x /usr/bin/perl ] || ln -sv /tools/bin/perl /usr/bin
-	[ -f /usr/lib/libgcc_s.so ] || ln -sv /tools/lib/libgcc_s.so{,.1} /usr/lib
+	[ -x /bin/bash ] || ln -fsv /tools/bin/{bash,cat,echo,pwd,stty} bin
+	[ -x /usr/bin/perl ] || ln -sv /tools/bin/perl usr/bin
+	[ -f /usr/lib/libgcc_s.so ] || ln -sv /tools/lib/libgcc_s.so{,.1} usr/lib
 	if [ ! -f /usr/lib/libstdc++.so ]; then
-		ln -sv /tools/lib/libstdc++.so{,.6} /usr/lib
-		sed 's/tools/usr/' /tools/lib/libstdc++.la > /usr/lib/libstdc++.la
+		ln -sv /tools/lib/libstdc++.so{,.6} usr/lib
+		sed 's/tools/usr/' /tools/lib/libstdc++.la > usr/lib/libstdc++.la
 	fi
-	[ -x /bin/sh ] || ln -sv bash /bin/sh
+	[ -x /bin/sh ] || ln -sv bash bin/sh
 
 	cat > etc/passwd <<- "EOF"
 	root:x:0:0:root:/root:/bin/bash
