--- a/INC/build-i686.conf
+++ b/INC/build-i686.conf
@@ -1,8 +1,8 @@
 PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin:/tools/bin
 SPECNAME=spec-i686
 PREFIX=/usr
-CFLAGS='-O3 -march=pentium2 -pipe '
-CXXFLAGS='-O3 -march=pentium2 -pipe '
+CFLAGS='-O3 -pipe '
+CXXFLAGS='-O3 -pipe '
 ARCH=i686
 ABI=32
 BUILD_LIST=(
