--- a/SPECS/kernel/build
+++ b/SPECS/kernel/build
@@ -3,4 +3,4 @@
 # Skip kernel configuration by copying the kernel config file, .config, from the host system (assuming it is available) to the unpacked linux directory.
 make oldconfig
 # Compile the kernel image and modules:
-make
+make $MAKEFLAGS
