Fix tarball generation errors

--- a/INC/build-arm.conf
+++ b/INC/build-arm.conf
@@ -4,6 +4,7 @@ CFLAGS='-Os -pipe '
 CXXFLAGS='-Os -pipe '
 ARCH=arm
 SPEC_NAME=spec-arm
+LOCALES=zh_CN
 BUILD_LIST=(
 	tools.conf/popt
 	tools.conf/pkg-config
