--- a/INC/build-i686.conf
+++ b/INC/build-i686.conf
@@ -32,6 +32,7 @@ BUILD_LIST=(
 	bash
 	libtool
 	gdbm
+	inetutils
 	popt
 	pkg-config
 	autoconf
@@ -70,13 +71,13 @@ configure_system()
 #		INTERFACE=${NIC##*/} udevadm test --action=add $NIC
 #	done
 	echo -e "\nCreating essential directories and files in ${PWD}\n"
-	mkdir -pv {bin,boot,etc/{opt,sysconfig},home,lib,mnt,opt,run}
+	mkdir -pv {bin,boot,etc/{opt,sysconfig},home,lib,mnt,opt,run,proc,sys}
 	mkdir -pv {media/{floppy,cdrom},sbin,srv,var}
 	install -dv -m 0750 root
 	install -dv -m 1777 tmp var/tmp
 	mkdir -pv usr/{,local/}{bin,include,lib,sbin,src}
 	mkdir -pv usr/{,local/}share/{doc,info,locale,man}
-	mkdir -pv  usr/{,local/}share/{misc,terminfo,zoneinfo}
+	mkdir -pv usr/{,local/}share/{misc,terminfo,zoneinfo}
 	mkdir -pv usr/{,local/}share/man/man{1..8}
 	for dir in usr usr/local; do
 		ln -fsv share/{man,doc,info} $dir
