issue #9 buildsys: add ability to generate install cd

--- a/INC/tools.conf
+++ b/INC/tools.conf
@@ -3,6 +3,7 @@ PREFIX=/tools
 CFLAGS='-O3 -pipe'
 CXXFLAGS='-O3 -pipe'
 ARCH=i686
+SPEC_NAME=spec-tools
 ACTION=build_pkgs
 BUILD_LIST="flex popt pkg-config"
 
