issue #9 buildsys: add ability to generate install cd

--- a/INC/build-i686.conf
+++ b/INC/build-i686.conf
@@ -96,7 +96,7 @@ configure_system()
 		ln -sv /tools/lib/libstdc++.so{,.6} usr/lib
 		sed 's/tools/usr/' /tools/lib/libstdc++.la > usr/lib/libstdc++.la
 	fi
-	[ -x /bin/sh ] || ln -sv bash bin/sh
+	[ -x bin/sh ] || ln -sv bash bin/sh
 
 	cat > etc/passwd <<- "EOF"
 	root:x:0:0:root:/root:/bin/bash
