set hostname to buildsys

--- a/INC/build-i686.conf
+++ b/INC/build-i686.conf
@@ -155,12 +155,12 @@ configure_system()
 	# Begin /etc/hosts
 
 	127.0.0.1 localhost
-	192.168.1.1 myserver
+	192.168.1.1 buildsys
 
 	# End /etc/hosts
 	EOF
 
-	echo "HOSTNAME=test" > etc/sysconfig/network
+	echo "HOSTNAME=buildsys" > etc/sysconfig/network
 
 	cat > etc/sysconfig/clock <<- "EOF"
 	# Begin /etc/sysconfig/clock
