Implement genext4 command. Issue #25

--- a/INC/build-arm.conf
+++ b/INC/build-arm.conf
@@ -46,7 +46,7 @@ configure_system()
 #		INTERFACE=${NIC##*/} udevadm test --action=add $NIC
 #	done
 	echo -e "\nCreating essential directories and files in ${PWD}\n"
-	mkdir -pv {bin,boot,etc/{opt,sysconfig},home,lib,mnt,opt,run}
+	mkdir -pv {bin,boot,dev,etc/{opt,sysconfig},home,lib,mnt,opt,run}
 	mkdir -pv {media/{floppy,cdrom},sbin,srv,var}
 	install -dv -m 0750 root
 	install -dv -m 1777 tmp var/tmp
