--- a/INC/build-w1ball.conf
+++ b/INC/build-w1ball.conf
@@ -1,8 +1,8 @@
 PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin:/tools/bin
 SPECNAME=spec-i686
 PREFIX=/usr
-CFLAGS='-O3 -pipe '
-CXXFLAGS='-O3 -pipe '
+CFLAGS='-mcpu=pentium2 -O3 -pipe '
+CXXFLAGS='-mcpu=pentium2 -O3 -pipe '
 ARCH=i686
 ABI=32
 LOCALES=zh_CN
@@ -71,7 +71,7 @@ configure_system()
 #		INTERFACE=${NIC##*/} udevadm test --action=add $NIC
 #	done
 	echo -e "\nCreating essential directories and files in ${PWD}\n"
-	mkdir -pv {bin,boot,etc/{opt,sysconfig},home,lib,mnt,opt,run,proc,sys}
+	mkdir -pv {bin,boot,dev,etc/{opt,sysconfig},home,lib,mnt,opt,run,proc,sys}
 	mkdir -pv {media/{floppy,cdrom},sbin,srv,var}
 	install -dv -m 0750 root
 	install -dv -m 1777 tmp var/tmp
@@ -231,7 +231,9 @@ configure_system()
 	# file system  mount-point  type     options             dump  fsck
 	#                                                              order
 
-	/dev/sda1      /            ext4     defaults            1     1
+	/dev/hdb3      /            ext3     defaults            1     1
+	/dev/hdb1      /boot        ext3     defaults            1     2
+	/dev/mapper/vg0-home            /home                   ext3    defaults        2 2 
 	#/dev/<yyy>     swap         swap     pri=1               0     0
 	proc           /proc        proc     nosuid,noexec,nodev 0     0
 	sysfs          /sys         sysfs    nosuid,noexec,nodev 0     0
