Add dependency check for build tools

--- a/INC/build-arm.conf
+++ b/INC/build-arm.conf
@@ -5,7 +5,7 @@ CXXFLAGS='-Os -pipe '
 ARCH=arm
 SPEC_NAME=spec-arm
 LOCALES=zh_CN
-BUILD_LIST=(
+PKG_LIST=(
 	tools.conf/popt
 	tools.conf/pkg-config
 	eglibc
