fix build error, add ROOTPASSWD variable for conf

--- a/INC/build-i686.conf
+++ b/INC/build-i686.conf
@@ -6,6 +6,7 @@ CXXFLAGS='-O3 -pipe '
 ARCH=i686
 ABI=32
 LOCALES=zh_CN
+ROOTPASSWD=''
 PKG_LIST=(
 	file
 	sed
@@ -38,13 +39,13 @@ PKG_LIST=(
 	kernel
 	)
 
-configure_system()
+configure_fs()
 {
 	# Run the following script on target machine to generate /etc/udev/rules.d/70-persistent-net.rules
 #	for NIC in /sys/class/net/* ; do
 #		INTERFACE=${NIC##*/} udevadm test --action=add $NIC
 #	done
-	echo -e "\nCreating essential directories and files in ${PWD}\n"
+
 	mkdir -pv {bin,boot,etc/{opt,sysconfig},home,lib,mnt,opt,run,proc,sys}
 	mkdir -pv {media/{floppy,cdrom},sbin,srv,var}
 	install -dv -m 0750 root
@@ -63,15 +64,6 @@ configure_system()
 	ln -fsv /run var/run
 	ln -fsv /run/lock var/lock
 	mkdir -pv var/{opt,cache,lib/{misc,locate},local}
-
-	[ -x /bin/bash ] || ln -fsv /tools/bin/{bash,cat,echo,pwd,stty} bin
-	[ -x /usr/bin/perl ] || ln -sv /tools/bin/perl usr/bin
-	[ -f /usr/lib/libgcc_s.so ] || ln -sv /tools/lib/libgcc_s.so{,.1} usr/lib
-	if [ ! -f /usr/lib/libstdc++.so ]; then
-		ln -sv /tools/lib/libstdc++.so{,.6} usr/lib
-		sed 's/tools/usr/' /tools/lib/libstdc++.la > usr/lib/libstdc++.la
-	fi
-	[ -x bin/sh ] || ln -sv bash bin/sh
 
 	cat > etc/passwd <<- "EOF"
 	root:x:0:0:root:/root:/bin/bash
