--- a/SPECS/kernel-headers/build
+++ b/SPECS/kernel-headers/build
@@ -6,10 +6,10 @@ make mrproper
 make headers_check
 make INSTALL_HDR_PATH=dest headers_install
 find dest/include \( -name .install -o -name ..install.cmd \) -delete
-if [ ! -d /usr/tmp-include ]; then
-	mkdir -pv /usr/tmp-include
-else
-	rm -rf /usr/tmp-include/*
-fi
-cp -rv dest/include/* /usr/{include,tmp-include}
+
+# Fix bug #3 "glibc build loop in NPTL"
+rm -rf $PREFIX/kernel-headers
+mkdir -pv $PREFIX/kernel-headers
+cp -rv dest/include/* $PREFIX/{include,kernel-headers}
+
 rm -rvf dest
