add release info

--- a/INC/build-i686.conf
+++ b/INC/build-i686.conf
@@ -9,6 +9,7 @@ ABI=32
 LOCALES=zh_CN
 ROOTPASSWD=''
 BSE_FS_SIZE=3G
+RELEASE=0
 PKG_LIST=(
 	file
 	sed
@@ -208,6 +209,13 @@ configure_fs()
 	devtmpfs       /dev         devtmpfs mode=0755,nosuid    0     0
 
 	# End /etc/fstab
+	EOF
+
+	cat > /etc/buildsys-release <<- "EOF"
+	DISTRIB_ID=BuildSys
+	DISTRIB_RELEASE=0.3
+	DISTRIB_CODENAME=
+	DISTRIB_DESCRIPTION="BuildSys 0.3"
 	EOF
 }
 
