--- a/INC/build-arm.conf
+++ b/INC/build-arm.conf
@@ -212,6 +212,13 @@ configure_system()
 
 	# End /etc/fstab
 	EOF
+
+	cat > /etc/buildsys-release <<- "EOF"
+	DISTRIB_ID=BuildSys
+	DISTRIB_RELEASE=0.3
+	DISTRIB_CODENAME=
+	DISTRIB_DESCRIPTION="BuildSys 0.3"
+	EOF
 }
 
 unset USERNAME
