--- a/INC/build-i686.conf
+++ b/INC/build-i686.conf
@@ -41,139 +41,139 @@ PKG_LIST=(
 	kernel
 	util-macros
 
-	# build xorg protocol headers
-	bigreqsproto
-	compositeproto
-	damageproto
-	dmxproto
-	dri2proto
-	fixesproto
-	fontsproto
-	glproto
-	inputproto
-	kbproto
-	randrproto
-	recordproto
-	renderproto
-	resourceproto
-	scrnsaverproto
-	videoproto
-	xcmiscproto
-	xextproto
-	xf86bigfontproto
-	xf86dgaproto
-	xf86driproto
-	xf86vidmodeproto
-	xineramaproto
-	xproto
+   # # build xorg protocol headers
+	#bigreqsproto
+	#compositeproto
+	#damageproto
+	#dmxproto
+	#dri2proto
+	#fixesproto
+	#fontsproto
+	#glproto
+	#inputproto
+	#kbproto
+	#randrproto
+	#recordproto
+	#renderproto
+	#resourceproto
+	#scrnsaverproto
+	#videoproto
+	#xcmiscproto
+	#xextproto
+	#xf86bigfontproto
+	#xf86dgaproto
+	#xf86driproto
+	#xf86vidmodeproto
+	#xineramaproto
+	#xproto
 
-	makedepend
-	libXau
-	libpthread-stubs
-	xcb-proto
-	libxcb
+	#makedepend
+	#libXau
+	#libpthread-stubs
+	#xcb-proto
+	#libxcb
 	
-	# build xorg libraries
-	xtrans
-	libX11
-	libXext
-	libFS
-	libICE
-	libSM
-	libXScrnSaver
-	libXt
-	libXmu
-	libXpm
-	libXaw
-	libXfixes
-	libXcomposite
-	libXrender
-	libXcursor
-	libXdamage
-	libfontenc
-	libXfont
-	libXft
-	libXi
-	libXinerama
-	libXrandr
-	libXres
-	libXtst
-	libXv
-	libXvMC
-	libXxf86dga
-	libXxf86vm
-	libdmx
-	libpciaccess
-	libxkbfile
+	## build xorg libraries
+	#xtrans
+	#libX11
+	#libXext
+	#libFS
+	#libICE
+	#libSM
+	#libXScrnSaver
+	#libXt
+	#libXmu
+	#libXpm
+	#libXaw
+	#libXfixes
+	#libXcomposite
+	#libXrender
+	#libXcursor
+	#libXdamage
+	#libfontenc
+	#libXfont
+	#libXft
+	#libXi
+	#libXinerama
+	#libXrandr
+	#libXres
+	#libXtst
+	#libXv
+	#libXvMC
+	#libXxf86dga
+	#libXxf86vm
+	#libdmx
+	#libpciaccess
+	#libxkbfile
 
-	xcb-util
-	mesalib
-	xbitmaps
+	#xcb-util
+	#mesalib
+	#xbitmaps
 
-	# build xorg app
-	bdftopcf
-	iceauth
-	luit
-	mkfontdir
-	mkfontscale
-	sessreg
-	setxkbmap
-	smproxy
-	x11perf
-	xauth
-	xbacklight
-	xcmsdb
-	xcursorgen
-	xdpyinfo
-	xdriinfo
-	xev
-	xgamma
-	xhost
-	xinput
-	xkbcomp
-	xkbevd
-	xkbutils
-	xkill
-	xlsatoms
-	xlsclients
-	xmodmap
-	xpr
-	xprop
-	xrandr
-	xrdb
-	xrefresh
-	xset
-	xsetroot
-	xvinfo
-	xwd
-	xwud
+	## build xorg app
+	#bdftopcf
+	#iceauth
+	#luit
+	#mkfontdir
+	#mkfontscale
+	#sessreg
+	#setxkbmap
+	#smproxy
+	#x11perf
+	#xauth
+	#xbacklight
+	#xcmsdb
+	#xcursorgen
+	#xdpyinfo
+	#xdriinfo
+	#xev
+	#xgamma
+	#xhost
+	#xinput
+	#xkbcomp
+	#xkbevd
+	#xkbutils
+	#xkill
+	#xlsatoms
+	#xlsclients
+	#xmodmap
+	#xpr
+	#xprop
+	#xrandr
+	#xrdb
+	#xrefresh
+	#xset
+	#xsetroot
+	#xvinfo
+	#xwd
+	#xwud
 
-	xcursor-themes
-	fonts
-	xkeyboard-config
-	printproto
-	libXp
-	xorg-server
+	#xcursor-themes
+	#fonts
+	#xkeyboard-config
+	#printproto
+	#libXp
+	#xorg-server
 
-	# build driver
-	3dfx-driver
-	ati-driver
-	evdev-driver
-	fbdev-driver
-	intel-driver
-	mga-driver
-	nouveau-driver
-	openchrome-driver
-	savage-driver
-	sis-driver
-	vesa-driver
-	VMmouse-driver
-	VMware-driver
-	wacom-driver
-	twm
-	xterm
-	xclock
-	xinit
+	## build driver
+	#3dfx-driver
+	#ati-driver
+	#evdev-driver
+	#fbdev-driver
+	#intel-driver
+	#mga-driver
+	#nouveau-driver
+	#openchrome-driver
+	#savage-driver
+	#sis-driver
+	#vesa-driver
+	#VMmouse-driver
+	#VMware-driver
+	#wacom-driver
+	#twm
+	#xterm
+	#xclock
+	#xinit
 	)
 
 configure_fs()
