--- a/INC/build-i686.conf
+++ b/INC/build-i686.conf
@@ -1,6 +1,6 @@
 PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin:/tools/bin
 SPECNAME=spec-i686
-SPECDIRS=(SPECS.utils SPECS.lib SPECS.security SPECS.X SPECS.dev)
+SPECDIRS=(SPECS SPECS.utils SPECS.lib SPECS.security SPECS.X SPECS.dev)
 PREFIX=/usr
 CFLAGS='-O3 -pipe '
 CXXFLAGS='-O3 -pipe '
