Full optimize for target and native build

--- a/INC/tools.conf
+++ b/INC/tools.conf
@@ -1,7 +1,7 @@
 PATH=/tools/bin:/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin
 PREFIX=/tools
-CFLAGS='-O3 -pipe'
-CXXFLAGS='-O3 -pipe'
+CFLAGS='-O3 -pipe -mtune=native'
+CXXFLAGS='-O3 -pipe -mtune=native'
 ARCH=i686
 SPEC_NAME=spec-tools
 ACTION=build_pkgs
