--- a/INC/build-arm.conf
+++ b/INC/build-arm.conf
@@ -3,7 +3,7 @@ PREFIX=/usr
 CFLAGS='-Os -pipe '
 CXXFLAGS='-Os -pipe '
 ARCH=arm
-SPEC_NAME=spec-arm
+SPECNAME=spec-arm
 LOCALES=zh_CN
 PKG_LIST=(
 	tools.conf/popt
