--- a/INC/tools.conf
+++ b/INC/tools.conf
@@ -1,26 +1,51 @@
 PATH=/tools/bin:/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin
 PREFIX=/tools
-CFLAGS='-O3 -pipe -mtune=native'
-CXXFLAGS='-O3 -pipe -mtune=native'
+CFLAGS='-O3 -pipe -march=i686'
+CXXFLAGS="-O3 -pipe -march=i686"
 ARCH=i686
-SPEC_NAME=spec-tools
+ABI=32
+LOCALES=UTF-8
+SPECDIRS=(SPECS SPECS.utils SPECS.lib SPECS.security SPECS.X SPECS.dev)
+SPECNAME=spec-tools
 ACTION=build_pkgs
-BUILD_LIST="flex popt pkg-config"
+PKG_LIST=(
+tools.conf/binutils
+tools.conf/gcc
+tools.conf/file
+tools.conf/bash
+tools.conf/gzip
+tools.conf/bzip2
+tools.conf/xz
+tools.conf/tar
+tools.conf/coreutils
+tools.conf/diffutils
+tools.conf/findutils
+tools.conf/gawk
+tools.conf/sed
+tools.conf/grep
+tools.conf/perl
+tools.conf/patch
+tools.conf/gettext
+tools.conf/m4
+tools.conf/make
+tools.conf/flex
+tools.conf/pkg-config
+)
 
-configure_system()
+configure_fs()
 {
 	# Run the following script on target machine to generate /etc/udev/rules.d/70-persistent-net.rules
 #	for NIC in /sys/class/net/* ; do
 #		INTERFACE=${NIC##*/} udevadm test --action=add $NIC
 #	done
-	echo -e "\nCreating essential directories and files in ${PWD}\n"
-	mkdir -pv {bin,boot,etc/{opt,sysconfig},home,lib,mnt,opt,run}
+
+	mkdir -pv {bin,boot,etc/{opt,sysconfig},home,lib,mnt,opt,run,proc,sys}
 	mkdir -pv {media/{floppy,cdrom},sbin,srv,var}
 	install -dv -m 0750 root
 	install -dv -m 1777 tmp var/tmp
 	mkdir -pv usr/{,local/}{bin,include,lib,sbin,src}
 	mkdir -pv usr/{,local/}share/{doc,info,locale,man}
-	mkdir -pv  usr/{,local/}share/{misc,terminfo,zoneinfo}
+	mkdir -pv usr/{,local/}share/{misc,terminfo,zoneinfo}
 	mkdir -pv usr/{,local/}share/man/man{1..8}
 	for dir in usr usr/local; do
 		ln -fsv share/{man,doc,info} $dir
@@ -32,15 +57,6 @@ configure_system()
 	ln -fsv /run var/run
 	ln -fsv /run/lock var/lock
 	mkdir -pv var/{opt,cache,lib/{misc,locate},local}
-
-	[ -x /bin/bash ] || ln -fsv /tools/bin/{bash,cat,echo,pwd,stty} /bin
-	[ -x /usr/bin/perl ] || ln -sv /tools/bin/perl /usr/bin
-	[ -f /usr/lib/libgcc_s.so ] || ln -sv /tools/lib/libgcc_s.so{,.1} /usr/lib
-	if [ ! -f /usr/lib/libstdc++.so ]; then
-		ln -sv /tools/lib/libstdc++.so{,.6} /usr/lib
-		sed 's/tools/usr/' /tools/lib/libstdc++.la > /usr/lib/libstdc++.la
-	fi
-	[ -x /bin/sh ] || ln -sv bash /bin/sh
 
 	cat > etc/passwd <<- "EOF"
 	root:x:0:0:root:/root:/bin/bash
@@ -98,12 +114,12 @@ configure_system()
 	# Begin /etc/hosts
 
 	127.0.0.1 localhost
-	192.168.1.1 myserver
+	192.168.1.1 buildsys
 
 	# End /etc/hosts
 	EOF
 
-	echo "HOSTNAME=test" > etc/sysconfig/network
+	echo "HOSTNAME=buildsys" > etc/sysconfig/network
 
 	cat > etc/sysconfig/clock <<- "EOF"
 	# Begin /etc/sysconfig/clock
@@ -174,9 +190,7 @@ configure_system()
 	# file system  mount-point  type     options             dump  fsck
 	#                                                              order
 
-	/dev/hdb3      /            ext3     defaults            1     1
-	/dev/hdb1      /boot        ext3     defaults            1     2
-	/dev/mapper/vg0-home            /home                   ext3    defaults        2 2 
+	/dev/sda1      /            ext4     defaults            1     1
 	#/dev/<yyy>     swap         swap     pri=1               0     0
 	proc           /proc        proc     nosuid,noexec,nodev 0     0
 	sysfs          /sys         sysfs    nosuid,noexec,nodev 0     0
@@ -185,6 +199,13 @@ configure_system()
 	devtmpfs       /dev         devtmpfs mode=0755,nosuid    0     0
 
 	# End /etc/fstab
+	EOF
+
+	cat > /etc/buildsys-release <<- "EOF"
+	DISTRIB_ID=BuildSys
+	DISTRIB_RELEASE=0.3
+	DISTRIB_CODENAME=
+	DISTRIB_DESCRIPTION="BuildSys 0.3"
 	EOF
 }
 unset USERNAME
