--- a/INC/build-i686.conf
+++ b/INC/build-i686.conf
@@ -2,8 +2,8 @@ PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:$HOME/bin:/tools/bin
 SPECNAME=spec-i686
 SPECDIRS=(SPECS SPECS.utils SPECS.lib SPECS.security SPECS.X SPECS.dev)
 PREFIX=/usr
-CFLAGS='-O3 -pipe '
-CXXFLAGS='-O3 -pipe '
+CFLAGS='-O3 -pipe -march=i686 -mtune=generic'
+CXXFLAGS='-O3 -pipe -march=i686 -mtune=generic'
 ARCH=i686
 ABI=32
 LOCALES=zh_CN
@@ -338,7 +338,7 @@ configure_fs()
 	#/dev/<yyy>     swap         swap     pri=1               0     0
 	proc           /proc        proc     nosuid,noexec,nodev 0     0
 	sysfs          /sys         sysfs    nosuid,noexec,nodev 0     0
-	devpts         /dev/pts     devpts   gid=4,mode=620      0     0
+	devpts         /dev/pts     devpts   gid=5,mode=620      0     0
 	tmpfs          /run         tmpfs    defaults            0     0
 	devtmpfs       /dev         devtmpfs mode=0755,nosuid    0     0
 
