--- a/INC/build-i686.conf
+++ b/INC/build-i686.conf
@@ -177,14 +177,19 @@ PKG_LIST=(
 	#xinit
 	)
 
+source $INCDIR/functions
+
 configure_fs()
 {
+	cat > configure-buildsys <<- "EOF"
+	#!/bin/sh
 	# Run the following script on target machine to generate /etc/udev/rules.d/70-persistent-net.rules
-#	for NIC in /sys/class/net/* ; do
-#		INTERFACE=${NIC##*/} udevadm test --action=add $NIC
-#	done
+	for NIC in /sys/class/net/* ; do
+		INTERFACE=${NIC##*/} udevadm test --action=add $NIC
+	done
+	EOF
 
-	mkdir -pv {bin,boot,etc/{opt,sysconfig},home,lib,mnt,opt,run,proc,sys}
+	mkdir -pv {bin,boot,dev,etc/{opt,sysconfig},home,lib,mnt,opt,run,proc,sys}
 	mkdir -pv {media/{floppy,cdrom},sbin,srv,var}
 	install -dv -m 0750 root
 	install -dv -m 1777 tmp var/tmp
@@ -202,6 +207,7 @@ configure_fs()
 	ln -fsv /run var/run
 	ln -fsv /run/lock var/lock
 	mkdir -pv var/{opt,cache,lib/{misc,locate},local}
+	mkinitdirs
 
 	cat > etc/passwd <<- "EOF"
 	root:x:0:0:root:/root:/bin/bash
@@ -339,14 +345,30 @@ configure_fs()
 	#/dev/<yyy>     swap         swap     pri=1               0     0
 	proc           /proc        proc     nosuid,noexec,nodev 0     0
 	sysfs          /sys         sysfs    nosuid,noexec,nodev 0     0
+	devtmpfs       /dev         devtmpfs mode=0755,nosuid    0     0
 	devpts         /dev/pts     devpts   gid=5,mode=620      0     0
 	tmpfs          /run         tmpfs    defaults            0     0
-	devtmpfs       /dev         devtmpfs mode=0755,nosuid    0     0
 
 	# End /etc/fstab
 	EOF
 
-	cat > /etc/buildsys-release <<- "EOF"
+	cat > etc/init.d/buildsys-config <<- "EOF"
+	#!/bin/sh
+	CONFIGS=$(find / -maxdepth 1 -type f -executable -name 'configure-*' | ls -tr)
+	for CONFIG in $CONFIGS; do
+		$CONFIG
+		rm -fv $CONFIG
+	done
+	EOF
+	ln -sf  ../init.d/buildsys-config etc/rc.d/rc0.d/S99buildsys-config
+	ln -sf  ../init.d/buildsys-config etc/rc.d/rc1.d/S99buildsys-config
+	ln -sf  ../init.d/buildsys-config etc/rc.d/rc2.d/S99buildsys-config
+	ln -sf  ../init.d/buildsys-config etc/rc.d/rc3.d/S99buildsys-config
+	ln -sf  ../init.d/buildsys-config etc/rc.d/rc4.d/S99buildsys-config
+	ln -sf  ../init.d/buildsys-config etc/rc.d/rc5.d/S99buildsys-config
+	ln -sf  ../init.d/buildsys-config etc/rc.d/rc6.d/S99buildsys-config
+
+	cat > etc/buildsys-release <<- "EOF"
 	DISTRIB_ID=BuildSys
 	DISTRIB_RELEASE=0.3
 	DISTRIB_CODENAME=
